Добавление автоматического создания хендлера + get profile
