# docs/swagger.json
@@ -172,6 +172,29 @@
                 }
             }
         },
+        "/logout": {
+            "post": {
+                "description": "Logs out a user and clears the refresh token cookie",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "User logout",
+                "responses": {
+                    "200": {
+                        "description": "User successfully logged out",
+                        "schema": {
+                            "$ref": "#/definitions/auth.LogoutResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/online": {
             "get": {
                 "security": [
@@ -199,6 +222,52 @@
                     },
                     "401": {
                         "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/auth.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/auth.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/profile": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Retrieves user profile information",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "User profile",
+                "responses": {
+                    "200": {
+                        "description": "User profile information",
+                        "schema": {
+                            "$ref": "#/definitions/auth.ProfileResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/auth.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "User not found",
                         "schema": {
                             "$ref": "#/definitions/auth.ErrorResponse"
                         }
@@ -360,44 +429,6 @@
                         }
                     }
                 }
-            },
-            "post": {
-                "description": "Creates a new user with the provided details",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "users"
-                ],
-                "summary": "Create a new user",
-                "parameters": [
-                    {
-                        "description": "User object to be created",
-                        "name": "user",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/user.User"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "User successfully created",
-                        "schema": {
-                            "$ref": "#/definitions/user.CreateResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Invalid JSON format or creation error",
-                        "schema": {
-                            "$ref": "#/definitions/user.ErrorResponse"
-                        }
-                    }
-                }
             }
         },
         "/users/{id}": {
@@ -484,6 +515,15 @@
                 }
             }
         },
+        "auth.LogoutResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "Успешный выход из системы"
+                }
+            }
+        },
         "auth.OnlineListResponse": {
             "type": "object",
             "properties": {
@@ -496,6 +536,18 @@
                 "message": {
                     "type": "string",
                     "example": "Список ID-шников онлайн пользователей"
+                }
+            }
+        },
+        "auth.ProfileResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/user.User"
+                },
+                "message": {
+                    "type": "string",
+                    "example": "Данные о пользователе"
                 }
             }
         },
@@ -646,18 +698,6 @@
                 },
                 "name": {
                     "type": "string"
-                }
-            }
-        },
-        "user.CreateResponse": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "$ref": "#/definitions/user.User"
-                },
-                "message": {
-                    "type": "string",
-                    "example": "Пользователь успешно создан"
                 }
             }
         },
