# internal/domain/auth/model.go
@@ -2,17 +2,17 @@ package auth
 
 import (
 	"test-project/internal/domain/user"
-	"time"
 )
 
-type Service interface {
-	Register(email, password string) (user.User, error)
-	Login(email, password string) (token string, err error)
-	// помечаем пользователя онлайн (вызыв. на каждом запросе)
-	TouchOnline(userID string) error
-	// возвращает список онлайн-ID
-	OnlineUsers(since time.Duration) ([]string, error)
-}
+// type Service interface {
+// 	Register(email, password string) (user.User, error)
+// 	Login(email, password string) (token string, err error)
+// 	// помечаем пользователя онлайн (вызыв. на каждом запросе)
+// 	TouchOnline(userID string) error
+// 	// возвращает список онлайн-ID
+// 	OnlineUsers(since time.Duration) ([]string, error)
+// 	GetUser(id int) (user.User, error)
+// }
 
 type RegisterRequest struct {
 	Email    string `json:"email" example:"john.doe@example.com"`
@@ -42,6 +42,15 @@ type RefreshResponse struct {
 type OnlineListResponse struct {
 	Message string   `json:"message" example:"Список ID-шников онлайн пользователей"`
 	Data    []string `json:"data"`
+}
+
+type LogoutResponse struct {
+	Message string `json:"message" example:"Успешный выход из системы"`
+}
+
+type ProfileResponse struct {
+	Message string    `json:"message" example:"Данные о пользователе"`
+	Data    user.User `json:"data"`
 }
 
 type ErrorResponse struct {
